# wrestle

./: CMakeLists.txt  README.md  package.xml
include/wrestle/: motion_manager_node.hpp  sim_clock_node.hpp
launch/: all.launch.py
plotjuggler/: walk.xml
pos/: crouch.pos  doublePunch.pos  getupBack.pos  getupBack2.pos  getupFront2.pos  hookLeft.pos  hookRight.pos  leanForward.pos  plank.pos  tipOver.pos
rviz/: default.rviz
scripts/: arm_provider.py  crouch.py  enforce_limits.py  head_skill.py  motion_manager.py  motion_to_pos.py  robot_detection.py
src/: motion_manager_node.cpp  sim_clock_node.cpp
urdf/: webots_controller.urdf
wrestle/: color_picker.py  image_processing.py  image_processing2.py  pariticipant_back.py  participant.py
