<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wrestle</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kenjibrameld@gmail.com">vscode</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>nao_lola_sensor_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <exec_depend>humanoid_base_footprint</exec_depend>
  <exec_depend>imu_filter_madgwick</exec_depend>
  <exec_depend>nao_state_publisher</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
